# lazybar

./: Cargo.toml  LICENSE  README.md  rust-analyzer.json  rustfmt.toml
examples/: config.toml
lazybar/: Cargo.toml
lazybar-core/: Cargo.toml
lazybar-core/examples/: config.toml
lazybar-core/src/: actions.rs  attrs.rs  background.rs  bar.rs  cleanup.rs  common.rs  highlight.rs  image.rs  ipc.rs  lib.rs  macros.rs  parser.rs  ramp.rs  utils.rs  x.rs
lazybar-core/src/panels/: battery.rs  clock.rs  cpu.rs  custom.rs  fanotify.rs  github.rs  i3mode.rs  inotify.rs  memory.rs  mod.rs  mpd.rs  network.rs  ping.rs  pulseaudio.rs  separator.rs  storage.rs  systray.rs  temp.rs  xwindow.rs  xworkspaces.rs
lazybar-msg/: Cargo.toml
lazybar-msg/src/: main.rs
lazybar-types/: Cargo.toml
lazybar-types/src/: lib.rs
lazybar/examples/: config.toml
lazybar/src/: main.rs
src/: attrs.rs  bar.rs  highlight.rs  lib.rs  main.rs  parser.rs  ramp.rs  utils.rs  x.rs
src/panels/: battery.rs  clock.rs  clock_stream.rs  cpu.rs  custom.rs  fanotify.rs  inotify.rs  memory.rs  mod.rs  mpd.rs  network.rs  ping.rs  pulseaudio.rs  separator.rs  temp.rs  wireless.rs  xwindow.rs  xworkspaces.rs
