[package]
name = "lazybar-core"
version = "0.4.1"
authors = ["Jeremy Smart <jeremy3141592@gmail.com>"]
edition = "2021"
rust-version = "1.79.0"
description = "A lightweight, event-driven X11 status bar"
readme = "../README.md"
repository = "https://github.com/Qelxiros/lazybar"
license = "MIT"
keywords = ["X11","WM","Linux","status-bar","i3"]
categories = ["os::linux-apis","os::unix-apis","gui","command-line-utilities","asynchronous"]

[features]
default = ["battery","clock","cpu","custom","fanotify","github","inotify","memory","mpd","network","ping","pulseaudio","separator","systray","temp","xwindow","xworkspaces"]
battery = []
clock = ["dep:chrono"]
cpu = []
custom = []
fanotify = ["dep:nix"]
github = ["dep:reqwest"]
inotify = ["dep:nix"]
memory = ["dep:aho-corasick"]
mpd = ["dep:aho-corasick","dep:mpd","dep:unicode-segmentation"]
network = ["dep:nix"]
ping = ["dep:fastping-rs"]
pulseaudio = ["dep:libpulse-binding"]
separator = []
systray = []
temp = []
xwindow = []
xworkspaces = ["dep:chrono"]

[dependencies]
acpid_plug = "0.1.2"
aho-corasick = { version = "1.1.3", optional = true }
anyhow = "1.0.86"
async-trait = "0.1.81"
cairo-rs = { version = "0.20.0", features = ["png", "xcb"] }
chrono = { version = "0.4.38", default-features = false, features = ["alloc", "clock"], optional = true }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
csscolorparser = "0.6.2"
derive_builder = "0.20.0"
fastping-rs = { version = "0.2.4", optional = true }
futures = "0.3.30"
glib = "0.20.0"
lazy_static = "1.5.0"
libpulse-binding = { version = "2.28.1", optional = true }
log = "0.4.22"
mpd = { version = "0.1.0", optional = true }
nix = { version = "0.29.0", features = ["net", "ioctl", "fanotify", "inotify", "socket", "uio", "fs", "hostname"], optional = true }
pango = { version = "0.20.0", features = ["v1_46"] }
pangocairo = "0.20.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["blocking", "json"], optional = true }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
signal-hook = { version = "0.3.17", features = ["iterator"] }
tokio = { version = "1.38.0", features = ["rt", "net", "time", "macros", "rt-multi-thread", "fs", "io-util"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
unicode-segmentation = { version = "1.11.0", optional = true }
x11rb = { version = "0.13.1", features = ["allow-unsafe-code", "randr", "render"] }
