[package]
name = "lazybar-core"
version = "0.9.0"
authors = ["Jeremy Smart <jeremy3141592@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"
description = "A lightweight, event-driven X11 status bar"
readme = "../README.md"
repository = "https://github.com/Qelxiros/lazybar"
license = "MIT"
keywords = ["X11", "WM", "Linux", "status-bar", "i3"]
categories = [
  "os::linux-apis",
  "os::unix-apis",
  "gui",
  "command-line-utilities",
  "asynchronous",
]

[features]
default = [
  "battery",
  "clock",
  "cpu",
  "custom",
  "github",
  "i3",
  "inotify",
  "memory",
  "mpd",
  "network",
  "ping",
  "pulseaudio",
  "separator",
  "storage",
  "systray",
  "temp",
  "xwindow",
  "xworkspaces",
]
cursor = ["x11rb/resource_manager"]
battery = []
clock = ["dep:chrono"]
cpu = []
custom = []
github = ["dep:reqwest"]
i3 = ["dep:i3ipc"]
inotify = []
memory = ["dep:aho-corasick"]
mpd = ["dep:aho-corasick", "dep:mpd", "dep:unicode-segmentation"]
network = []
ping = ["dep:fastping-rs"]
pulseaudio = ["dep:libpulse-binding"]
separator = []
storage = ["dep:aho-corasick"]
systray = []
temp = []
xwindow = []
xworkspaces = ["dep:chrono"]

[dependencies]
acpid_plug = "0.1.2"
aho-corasick = { version = "1.1.4", optional = true }
anyhow = "1.0.100"
async-trait = "0.1.89"
cairo-rs = { version = "0.21.2", features = ["png", "xcb"] }
chrono = { version = "0.4.42", default-features = false, features = [
  "alloc",
  "clock",
], optional = true }
config = { version = "0.15.18", default-features = false, features = ["toml"] }
csscolorparser = "0.7.2"
derive-debug = "0.1.2"
derive_builder = "0.20.2"
directories = "6.0.0"
fastping-rs = { version = "0.2.4", optional = true }
futures = "0.3.31"
glib = "0.21.4"
i3ipc = { version = "0.10.1", optional = true }
if-addrs = "0.14.0"
lazybar-types = { version = "0.4.0", path = "../lazybar-types" }
libpulse-binding = { version = "2.30.1", optional = true }
log = "0.4.28"
mpd = { version = "0.1.0", optional = true }
pango = { version = "0.21.3", features = ["v1_46"] }
pangocairo = "0.21.2"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = [
  "blocking",
  "json",
], optional = true }
rustix = { version = "1.1.2", features = ["fs", "system", "net"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
signal-hook = { version = "0.3.18", features = ["iterator"] }
tokio = { version = "1.48.0", features = [
  "rt",
  "net",
  "time",
  "macros",
  "rt-multi-thread",
  "fs",
  "io-util",
] }
tokio-stream = { version = "0.1.17", features = ["net"] }
unicode-segmentation = { version = "1.12.0", optional = true }
x11rb = { version = "0.13.2", features = [
  "allow-unsafe-code",
  "cursor",
  "randr",
  "render",
] }
