[package]
name = "lazybar-msg"
version = "0.5.0"
authors = ["Jeremy Smart <jeremy3141592@gmail.com>"]
edition = "2021"
rust-version = "1.79.0"
description = "IPC for lazybar using UNIX sockets"
readme = "../README.md"
repository = "https://github.com/Qelxiros/lazybar"
license = "MIT"
keywords = ["X11", "WM", "Linux", "status-bar", "ipc"]
categories = [
  "os::linux-apis",
  "os::unix-apis",
  "command-line-utilities",
  "asynchronous",
]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["cargo", "derive"] }
clap_complete = "4.5.8"
lazybar-types = { version = "0.2.0", path = "../lazybar-types" }
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
simple_logger = "5.0.0"
tokio = { version = "1.38.0", features = [
  "io-util",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
] }
