[package]
name = "lazybar-msg"
version = "0.7.0"
authors = ["Jeremy Smart <jeremy3141592@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"
description = "IPC for lazybar using UNIX sockets"
readme = "../README.md"
repository = "https://github.com/Qelxiros/lazybar"
license = "MIT"
keywords = ["X11", "WM", "Linux", "status-bar", "ipc"]
categories = [
  "os::linux-apis",
  "os::unix-apis",
  "command-line-utilities",
  "asynchronous",
]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["cargo", "derive"] }
clap_complete = "4.5.46"
lazybar-types = { version = "0.4.0", path = "../lazybar-types" }
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simple_logger = "5.0.0"
tokio = { version = "1.44.1", features = [
  "io-util",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
] }
