[package]
name = "lazybar-msg"
version = "0.7.0"
authors = ["Jeremy Smart <jeremy3141592@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"
description = "IPC for lazybar using UNIX sockets"
readme = "../README.md"
repository = "https://github.com/Qelxiros/lazybar"
license = "MIT"
keywords = ["X11", "WM", "Linux", "status-bar", "ipc"]
categories = [
  "os::linux-apis",
  "os::unix-apis",
  "command-line-utilities",
  "asynchronous",
]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["cargo", "derive"] }
clap_complete = "4.5.60"
lazybar-types = { version = "0.4.0", path = "../lazybar-types" }
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
simple_logger = "5.1.0"
tokio = { version = "1.48.0", features = [
  "io-util",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
] }
