[package]
name = "lazybar-types"
version = "0.4.1"
authors = ["Jeremy Smart <jeremy3141592@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"
description = "Shared types for lazybar and lazybar-msg"
readme = "../README.md"
repository = "https://github.com/Qelxiros/lazybar"
license = "MIT"
keywords = ["X11", "WM", "Linux", "status-bar", "i3"]
categories = [
  "os::linux-apis",
  "os::unix-apis",
  "gui",
  "command-line-utilities",
  "asynchronous",
]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
