[package]
name = "lazybar"
version = "0.3.5"
authors = ["Jeremy Smart <jeremy3141592@gmail.com>"]
edition = "2021"
rust-version = "1.79.0"
description = "A lightweight, event-driven X11 status bar"
readme = "../README.md"
repository = "https://github.com/Qelxiros/lazybar"
license = "MIT"
keywords = ["X11","WM","Linux","status-bar","i3"]
categories = ["os::linux-apis","os::unix-apis","gui","command-line-utilities","asynchronous"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["cargo"] }
clap_complete = "4.5.7"
lazybar-core = { version = "0.3.2", path = "../lazybar-core" }
log = "0.4.22"
signal-hook = { version = "0.3.17", features = ["iterator"] }
simple_logger = "5.0.0"
