[package]
name = "lazybar"
version = "0.6.0"
authors = ["Jeremy Smart <jeremy3141592@gmail.com>"]
edition = "2021"
rust-version = "1.79.0"
description = "A lightweight, event-driven X11 status bar"
readme = "../README.md"
repository = "https://github.com/Qelxiros/lazybar"
license = "MIT"
keywords = ["X11", "WM", "Linux", "status-bar", "i3"]
categories = [
  "os::linux-apis",
  "os::unix-apis",
  "gui",
  "command-line-utilities",
  "asynchronous",
]

[features]
default = [
  "battery",
  "clock",
  "cpu",
  "custom",
  "github",
  "inotify",
  "memory",
  "mpd",
  "network",
  "ping",
  "pulseaudio",
  "separator",
  "systray",
  "temp",
  "xwindow",
  "xworkspaces",
]
battery = ["lazybar-core/battery"]
clock = ["lazybar-core/clock"]
cpu = ["lazybar-core/cpu"]
custom = ["lazybar-core/custom"]
github = ["lazybar-core/github"]
inotify = ["lazybar-core/inotify"]
memory = ["lazybar-core/memory"]
mpd = ["lazybar-core/mpd"]
network = ["lazybar-core/network"]
ping = ["lazybar-core/ping"]
pulseaudio = ["lazybar-core/pulseaudio"]
separator = ["lazybar-core/separator"]
systray = ["lazybar-core/systray"]
temp = ["lazybar-core/temp"]
xwindow = ["lazybar-core/xwindow"]
xworkspaces = ["lazybar-core/xworkspaces"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["cargo"] }
clap_complete = "4.5.8"
lazybar-core = { version = "0.6.0", default-features = false, path = "../lazybar-core" }
log = "0.4.22"
signal-hook = { version = "0.3.17", features = ["iterator"] }
simple_logger = "5.0.0"
