[package]
name = "lazybar"
version = "0.9.0"
authors = ["Jeremy Smart <jeremy3141592@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"
description = "A lightweight, event-driven X11 status bar"
readme = "../README.md"
repository = "https://github.com/Qelxiros/lazybar"
license = "MIT"
keywords = ["X11", "WM", "Linux", "status-bar", "i3"]
categories = [
  "os::linux-apis",
  "os::unix-apis",
  "gui",
  "command-line-utilities",
  "asynchronous",
]

[features]
default = [
  "battery",
  "clock",
  "cpu",
  "custom",
  "github",
  "i3",
  "inotify",
  "memory",
  "mpd",
  "network",
  "ping",
  "pulseaudio",
  "separator",
  "storage",
  "systray",
  "temp",
  "xwindow",
  "xworkspaces",
]
battery = ["lazybar-core/battery"]
clock = ["lazybar-core/clock"]
cpu = ["lazybar-core/cpu"]
custom = ["lazybar-core/custom"]
github = ["lazybar-core/github"]
i3 = ["lazybar-core/i3"]
inotify = ["lazybar-core/inotify"]
memory = ["lazybar-core/memory"]
mpd = ["lazybar-core/mpd"]
network = ["lazybar-core/network"]
ping = ["lazybar-core/ping"]
pulseaudio = ["lazybar-core/pulseaudio"]
separator = ["lazybar-core/separator"]
storage = ["lazybar-core/storage"]
systray = ["lazybar-core/systray"]
temp = ["lazybar-core/temp"]
xwindow = ["lazybar-core/xwindow"]
xworkspaces = ["lazybar-core/xworkspaces"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["cargo"] }
clap_complete = "4.5.60"
lazybar-core = { version = "0.9.0", default-features = false, path = "../lazybar-core" }
log = "0.4.28"
signal-hook = { version = "0.3.18", features = ["iterator"] }
simple_logger = "5.1.0"
